Updated scripts with headers

--- a/3_mine_entity-extraction.ipynb
+++ b/3_mine_entity-extraction.ipynb
@@ -12,6 +12,7 @@
     "Before running this script:\n",
     "\n",
     "- Complete: [2_parse.ipynb](2_parse.ipynb)\n",
+    "- Register an openrouter.ai (or smilar openai client compliant inference provider) and set up the API key in the config\n",
     "\n",
     "> ⚠️ It is important to note that the running of this script will incur charges with your LLM API account!"
    ]
