--- a/3_mine_logical-filter.ipynb
+++ b/3_mine_logical-filter.ipynb
@@ -1,25 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fc378ccc",
+   "metadata": {},
+   "source": [
+    "# LaTeXpOsEd: Data Mining Stage, Logical Filtering Substep\n",
+    "\n",
+    "In this stage the non-LaTeX files are filtered based on whether they are imported into the final PDF or not, as well as whether they are likely to contain any insteresting information.\n",
+    "\n",
+    "Before running this script:\n",
+    "\n",
+    "- Complete: [2_parse.ipynb](1_parse.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ec025bd9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tqdm in ./.venv/lib/python3.13/site-packages (4.67.1)\n",
-      "Collecting pillow\n",
-      "  Using cached pillow-11.3.0-cp313-cp313-macosx_11_0_arm64.whl.metadata (9.0 kB)\n",
-      "Using cached pillow-11.3.0-cp313-cp313-macosx_11_0_arm64.whl (4.7 MB)\n",
-      "Installing collected packages: pillow\n",
-      "Successfully installed pillow-11.3.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install tqdm pillow detect-secrets"
    ]
